# forkme

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
src/: config.rs  git.rs  lib.rs  main.rs  patch.rs
src/commands/: apply.rs  init.rs  mod.rs  stats.rs  status.rs  sync.rs  update.rs
tests/: integration.rs
